<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    app:cardElevation="18dp"
    android:layout_rowWeight="1"
    android:layout_columnWeight="1"
    app:cardCornerRadius="20dp"
    android:layout_marginTop="0dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp"
    android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/relative1">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relative5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedcorner"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:padding="15dp"
            android:textSize="24sp"
            android:tint="#C552E2"
            android:text="@string/M"
            android:id="@+id/text11"/>

    </RelativeLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/linear5">
    <RelativeLayout
        android:id="@+id/relative2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/relative11">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:id="@+id/textTitle"
                android:textSize="20sp"
                android:padding="5dp"
                android:text="@string/profile"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative11"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="#F18A87"
                app:srcCompat="@drawable/ic_location_on_black_24dp" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="#E67874"
                app:srcCompat="@drawable/ic_call_red_24dp" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linear6"
            android:layout_below="@+id/linear2"
            android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linear7"
            android:orientation="vertical">
        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear6"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="#E67874"
                app:srcCompat="@drawable/ic_email_black_24dp" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="#E67874"
                app:srcCompat="@drawable/ic_access_time_black_24dp" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/designation" />

        </LinearLayout>
        </LinearLayout>

            <RelativeLayout
                android:id="@+id/relative4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginStart="32dp"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button"
                    android:textSize="15sp"
                    android:background="@drawable/roundedcorner4"
                    android:text="@string/view"
                    android:padding="10dp"
                    android:textColor="@color/colorWhite"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>

</LinearLayout>

</androidx.cardview.widget.CardView>