<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <View
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_img_toolbar"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:padding="4dp"
        android:id="@+id/backButton"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_dashboard"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:text="@string/email"
        android:textSize="13sp"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_dashboard"
        android:layout_marginStart="34dp"
        android:layout_marginTop="62dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:text="@string/name"
        android:textSize="12sp"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="34dp"
        app:layout_constraintTop_toBottomOf="@+id/email"/>
    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="39dp"
        android:padding="4dp"
        android:contentDescription="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_dashboard"
        app:srcCompat="@drawable/ic_account_circle_black_24dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:padding="4dp"
        android:id="@+id/link"
        android:contentDescription="@string/extlink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_dashboard"
        app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProfile"/>
<!--    <RelativeLayout-->
<!--        android:id="@+id/relative1"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="40dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/imgProfile">-->

<!--        <LinearLayout-->
<!--            android:id="@+id/linear11"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="20dp"-->
<!--            android:orientation="vertical">-->

<!--            <LinearLayout-->
<!--                android:id="@+id/linear1"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal">-->

<!--                <RelativeLayout-->
<!--                    android:id="@+id/relative"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="50dp">-->

<!--                    <ImageView-->
<!--                        android:id="@+id/imgProfile1"-->
<!--                        android:layout_width="50dp"-->
<!--                        android:layout_height="50dp"-->
<!--                        android:layout_centerInParent="true"-->
<!--                        android:padding="4dp"-->
<!--                        app:srcCompat="@drawable/ic_account_circle_black_24dp" />-->
<!--                </RelativeLayout>-->

<!--                <RelativeLayout-->
<!--                    android:id="@+id/relative2"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="20dp">-->

<!--                    <LinearLayout-->
<!--                        android:id="@+id/linear4"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_centerHorizontal="true"-->
<!--                        android:orientation="vertical">-->

<!--                        <TextView-->
<!--                            android:id="@+id/text11"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:gravity="center"-->
<!--                            android:padding="4dp"-->
<!--                            android:text="@string/school"-->
<!--                            android:textSize="15sp" />-->

<!--                        <TextView-->
<!--                            android:id="@+id/text12"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:gravity="center"-->
<!--                            android:padding="4dp"-->
<!--                            android:text="school Name"-->
<!--                            android:textSize="18sp" />-->


<!--                    </LinearLayout>-->
<!--                </RelativeLayout>-->
<!--            </LinearLayout>-->

<!--            <LinearLayout-->
<!--                android:id="@+id/linear2"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal">-->

<!--                <RelativeLayout-->
<!--                    android:id="@+id/relative4"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="50dp">-->

<!--                    <ImageView-->
<!--                        android:id="@+id/imgProfile2"-->
<!--                        android:layout_width="50dp"-->
<!--                        android:layout_height="50dp"-->
<!--                        android:layout_centerInParent="true"-->
<!--                        android:padding="4dp"-->
<!--                        app:srcCompat="@drawable/ic_account_circle_black_24dp" />-->
<!--                </RelativeLayout>-->

<!--                <RelativeLayout-->
<!--                    android:id="@+id/relative3"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="20dp">-->

<!--                    <LinearLayout-->
<!--                        android:id="@+id/linear3"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_centerHorizontal="true"-->
<!--                        android:orientation="vertical">-->

<!--                        <TextView-->
<!--                            android:id="@+id/text31"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:gravity="center"-->
<!--                            android:padding="4dp"-->
<!--                            android:text="@string/nickname"-->
<!--                            android:textSize="15sp" />-->

<!--                        <TextView-->
<!--                            android:id="@+id/text32"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:gravity="center"-->
<!--                            android:padding="4dp"-->
<!--                            android:text="@string/nickname"-->
<!--                            android:textSize="18sp" />-->

<!--                    </LinearLayout>-->
<!--                </RelativeLayout>-->
<!--            </LinearLayout>-->

<!--            <LinearLayout-->
<!--                android:id="@+id/linear5"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal">-->

<!--                <RelativeLayout-->
<!--                    android:id="@+id/relative5"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="50dp">-->

<!--                    <ImageView-->
<!--                        android:id="@+id/imgProfile3"-->
<!--                        android:layout_width="50dp"-->
<!--                        android:layout_height="50dp"-->
<!--                        android:layout_centerInParent="true"-->
<!--                        android:padding="4dp"-->
<!--                        app:srcCompat="@drawable/ic_contacts_black_24dp" />-->
<!--                </RelativeLayout>-->

<!--                <RelativeLayout-->
<!--                    android:id="@+id/relative7"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="20dp">-->

<!--                    <LinearLayout-->
<!--                        android:id="@+id/linear6"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_centerHorizontal="true"-->

<!--                        android:orientation="vertical">-->

<!--                        <TextView-->
<!--                            android:id="@+id/text21"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:gravity="center"-->
<!--                            android:padding="4dp"-->
<!--                            android:text="@string/emergencycontact" />-->

<!--                        <TextView-->
<!--                            android:id="@+id/text22"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:gravity="center"-->
<!--                            android:padding="4dp"-->
<!--                            android:text="@string/emergencycontact"-->
<!--                            android:textSize="18sp" />-->


<!--                    </LinearLayout>-->
<!--                </RelativeLayout>-->
<!--            </LinearLayout>-->

<!--            <LinearLayout-->
<!--                android:id="@+id/linear7"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal">-->

<!--                <RelativeLayout-->
<!--                    android:id="@+id/relative6"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="50dp">-->

<!--                    <ImageView-->
<!--                        android:id="@+id/imgProfile4"-->
<!--                        android:layout_width="50dp"-->
<!--                        android:layout_height="50dp"-->
<!--                        android:layout_centerInParent="true"-->
<!--                        android:padding="4dp"-->
<!--                        app:srcCompat="@drawable/ic_call_black_24dp" />-->
<!--                </RelativeLayout>-->

<!--                <RelativeLayout-->
<!--                    android:id="@+id/relative8"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="20dp">-->

<!--                    <LinearLayout-->
<!--                        android:id="@+id/linear8"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_centerHorizontal="true"-->
<!--                        android:orientation="vertical">-->

<!--                        <TextView-->
<!--                            android:id="@+id/text41"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:gravity="center"-->
<!--                            android:padding="4dp"-->
<!--                            android:text="@string/emergencynum"-->
<!--                            android:textSize="15sp" />-->

<!--                        <TextView-->
<!--                            android:id="@+id/text42"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:gravity="center"-->
<!--                            android:padding="4dp"-->
<!--                            android:text="@string/emergencynum"-->
<!--                            android:textSize="18sp" />-->

<!--                    </LinearLayout>-->
<!--                </RelativeLayout>-->
<!--            </LinearLayout>-->


<!--        </LinearLayout>-->

<!--    </RelativeLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>